frontend/test/should_pass/to_003.grg
using test_model_002;

rule to_1 {
	a : A;
    b : AB;		
	c : typeof(a);
    d : typeof(b);

	replace{
		a --> b <-- c --> d --> :typeof(d);
	}
}
